configs/header-split-traffic.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - match:
    - headers:
        foo:
          exact: bar
    route:
      - destination:
          host: myapp
          subset: v1
  - route:
    - destination:
        host: myapp
        subset: v2
