configs/retry.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - route:
    - destination:
        host: myapp
        subset: v1
    retries:
      attempts: 3
      perTryTimeout: 2s
